# js-randomness-predictor-rust

./: Cargo.toml  README.md  main.rs  misc-commands.sh  v8predictor.rs
src/: chrome_predictor.rs  errors.rs  firefox_predictor.rs  lib.rs  node_predictor.rs  nodejs_major_version.rs  predictor.rs  safari_predictor.rs  v8_predictor.rs  v8predictor.rs
