[package]
name = "js-randomness-predictor-rust"
include = ["Cargo.toml", "src/**/*"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
z3 = "0.12.1"

[[bin]]
name = "jsrp"
path = "bin/jsrp.rs"

[lib]
name = "js_randomness_predictor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
