[package]
name = "js-randomness-predictor-rust"
include = ["Cargo.toml", "src/**/*"]
version = "0.1.0"
edition = "2024"
authors = ["Matt Oestreich"]
description = "A Rust library for predicting JavaScript `Math.random()` output for Node, Chrome, Firefox, and Safari environments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthewoestreich/js-randomness-predictor-rust"
readme = "README.md"
keywords = ["predictor", "randomness", "z3", "node", "v8", "firefox", "chrome", "safari", "predict javascript randomness", "javascript", "smt"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
z3 = "0.12.1"

[[bin]]
name = "jsrp"
path = "bin/jsrp.rs"

[lib]
name = "js_randomness_predictor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
