[package]
name = "jsrp"
include = ["Cargo.toml", "src/**/*", "bin/**/*"]
version = "0.2.0"
edition = "2024"
authors = ["Matt Oestreich"]
description = "A Rust library for predicting JavaScript `Math.random()` output for Node, Chrome, Firefox, and Safari environments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthewoestreich/js-randomness-predictor-rust"
readme = "README.md"
keywords = ["predictor", "randomness", "z3", "javascript", "js"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
z3 = "0.12.1"

[[bin]]
name = "jsrp"
path = "bin/main.rs"

[lib]
name = "js_randomness_predictor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
